# pytorch_regression_model

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  python-package-conda.yml  python-package.yml
pytorch_regression_model/: __init__.py  regmodel.py
src/pytorch_regmodel/: __init__.py  regmodel.py
tests/: test_regmodel.py
