[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytorch_regression_model"
version = "0.0.1"
authors = [
  { name="Nils Kurzawa", email="nilskurzawa@gmail.com" },
]
description = "A package for building simple pytorch regression models"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/nkurzaw/pytorch_regression_model"
"Bug Tracker" = "https://github.com/nkurzaw/pytorch_regression_model/issues"
